# arbitrage

./: CMakeLists.txt  ClientSocket.cpp  CurrencyMarket.cpp  CurrencyMarket.h  Makefile  README.txt  Socket.cpp  Socket.h  currentrates.txt  simple_client  simple_client_main.cpp
